--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Main_Stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="../Stylesheets/Main_Stylesheet.css">
 	<title>Termek</title>
 </head>
 <body>
