--- a/Stylesheets/Main_Stylesheet.css
+++ b/Stylesheets/Main_Stylesheet.css
@@ -2,6 +2,10 @@ tr {
 	border: none;
 }
 
+td {
+	height: 50px;
+}
+
 #tableTitle{
 	border-bottom: 5px solid black;
 	padding: 10px 1px 10px 1px;
@@ -17,7 +21,7 @@ tr {
 }
 
 .ora{
-	padding: 40px;
+	padding: 20px;
 	width: 50px;
 	background-color: #F0F8FF;
 	font-weight: bold;
@@ -63,7 +67,7 @@ body {
 }
 
 #csutortok{
-	background-color: 	#FFB6C1; 
+	background-color: 	#FFB6C1;
 }
 
 #pentek{
