--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -35,7 +35,9 @@
 									<%= oraarray[i][j].ora %>
 									<form action="/submit" method="post">
 										<input type="text" name="name"></input>
-										<input type="hidden" name="id" value="" id="hidden"/>
+										<input type="hidden" name="id" value="
+										<%= i*5+j %>
+										"/>
 										<input type="submit" value="submit"></input>
 									</form>
 								</td>
@@ -44,7 +46,7 @@
 					</tr>
 				<% }; %>
 
-				
+
 
 			</tbody>
 		</table>
