--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -35,9 +35,9 @@
 									<%= oraarray[i][j].ora %>
 									<form action="/submit" method="post">
 										<input type="text" name="name"></input>
-										<input type="hidden" name="id" value="
+										<input type="hidden" name="id" value=
 										<%= i*5+j %>
-										"/>
+										/>
 										<input type="submit" value="submit"></input>
 									</form>
 								</td>
@@ -45,9 +45,7 @@
 						<% }; %>
 					</tr>
 				<% }; %>
-
-
-
+				
 			</tbody>
 		</table>
 	</div>
