--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -7,32 +7,31 @@
   <body>
     <script type="text/javascript">
 
-    function teremGomb(szam) {
-      console.log(szam);
-      if (szam == 42){
-        for (var j = 2; j < 41; j += 2){
-          var k = j.toString();
-          document.getElementById(k).style.backgroundColor = "black";
-        };
-      };
-    };
-    function tanarGomb(tanar) {
-      console.log(tanar);
-    };
+      function pamacs(){
+        var url = window.location.search.substring(1);
+        /*for (var i = 0; i < oraarray.length; i++){
+          if (oraarray[i] == url){
+            var response = oraarray[i].toArray();
+          }
+        }*/
+
+        console.log(url);
+
+      }
     </script>
     <div class="container-fluid"; style="text-align:center">
       <table class="table table-stripped table-bordered table-hover table-condensed table-responsive"; style="text-align:center">
         <thead>
           <tr>
-            <th colspan="2">Teremszámok:</th>
-            <th><a href="#" onclick="teremGomb(42)">42</a></th>
-            <th><a href="#" onclick="teremGomb(43)">43</a></th>
-            <th><a href="#" onclick="teremGomb(44)">44</a></th>
-            <th><a href="#" onclick="teremGomb(420)">420</a></th>
-            <th><a href="#" onclick="teremGomb(69)">69</a></th>
+            <th>Teremszámok:</th>
+            <th><a href="?101" onclick="pamacs()">42</a></th>
+            <th><a href="#" >43</a></th>
+            <th><a href="#" >44</a></th>
+            <th><a href="#" >420</a></th>
+            <th><a href="#" >69</a></th>
           </tr>
           <tr>
-            <th colspan="2">Tanárok:</th>
+            <th>Tanárok:</th>
   					<th class="active"; id="hetfo"; style="text-align:center">Hétfő</th>
   					<th class="success"; id="kedd"; style="text-align:center">Kedd</th>
   					<th class="warning"; id="szerda"; style="text-align:center">Szerda</th>
@@ -41,62 +40,17 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td><a href="#" onclick="tanarGomb(1)">D.M.A.</a></td>
-            <td>1. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td><a href="#" onclick="tanarGomb(2)">N.L.</a></td>
-            <td>2. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 5+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td><a href="#" onclick="tanarGomb(3)">Sz.G.</a></td>
-            <td>3. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 10+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td><a href="#" onclick="tanarGomb(4)">Cs.G.</a></td>
-            <td>4. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 15+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td><a href="#" onclick="tanarGomb(5)">Cz.I.</a></td>
-            <td>5. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 20+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td></td>
-            <td>6. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 25+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td></td>
-            <td>7. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 30+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
-          <tr>
-            <td></td>
-            <td>8. óra</td>
-            <% for (var i = 0; i < 5; i++) { %>
-            <td><div id="<%= 35+i+1 %>">X<div></div></div></td>
-            <% } %>
-          </tr>
+          <% for (var i = 0; i < 8; i++){ %>
+            <tr>
+              <% for (var j = 0; j < 6; j++){ %>
+                <% if (j === 0){ %>
+                  <td><%= i + 1 %>. óra</td>
+                <% } else { %>
+                  <td id= <%= i*5+j %>></td>
+                <% }; %>
+              <% }; %>
+            </tr>
+          <% }; %>  
         </tbody>
       </table>
     </div>
