--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -5,19 +5,15 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   </head>
   <body>
+    <script type="application/json" src="../Data/OraId.json"></script>
     <script type="text/javascript">
 
       function pamacs(){
         var url = window.location.search.substring(1);
-        /*for (var i = 0; i < oraarray.length; i++){
-          if (oraarray[i] == url){
-            var response = oraarray[i].toArray();
-          }
-        }*/
-
+        var mydata = JSON.parse();
         console.log(url);
-
       }
+
     </script>
     <div class="container-fluid"; style="text-align:center">
       <table class="table table-stripped table-bordered table-hover table-condensed table-responsive"; style="text-align:center">
