--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -13,10 +13,13 @@
         console.log(oraData);
         for (var i = 0; i < oraData.length; i++) {
           var element = document.getElementById(oraData[i].id)
-          element.innerHTML = oraData[i].value;
+          element.innerHTML += "<p>" + oraData[i].value + "</p>";
           element.className += " warning";
         }
         
+      }
+      function oraClicked(id) {
+        document.getElementById("form-" + id).style.display = "block";
       }
 
       window.onload = function() {
@@ -25,7 +28,7 @@
 
     </script>
     <div class="container-fluid">
-      <form class="form-inline" action="/" method="get">
+      <form class="form-inline teremForm" action="/" method="get">
         <label>Terem:</label>
         <select name="terem">
           <% for (var i = 0; i < termek.length; i++) { %>
@@ -54,7 +57,13 @@
                 <% if (j === 0){ %>
                   <td><%= i + 1 %>. óra</td>
                 <% } else { %>
-                  <td id= <%= i*5+j %>></td>
+                  <td id=<%= i*5+j %> onclick="oraClicked(<%= i*5+j %>)">
+                    <form id="form-<%= i*5+j %>" class="oraForm form-inline" action="/submit" method="post">
+                      <input type="text" name="name"></input>
+                      <input type="hidden" name="id" value=<%= i*5+j %>/>
+                      <button type="submit" class="btn btn-default">Módosít</button>
+                    </form>
+                  </td>
                 <% }; %>
               <% }; %>
             </tr>
