--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -34,6 +34,7 @@
 
     </script>
     <div class="container-fluid">
+
       <form class="form-inline teremForm" action="/" method="get">
         <label>Terem:</label>
         <select name="terem">
@@ -43,6 +44,12 @@
         </select>
         <button type="submit" class="btn btn-default">Kiválaszt</button>
       </form>
+
+      <form class="form-inline" action="/" method="get">
+        <input type="text" name="ujterem">
+        <button type="submit" class="btn btn-default">Új terem hozzáadása</button>   
+      </form>
+
     </div>
     <div class="container-fluid" style="text-align:center">
       <table class="table table-stripped table-bordered table-hover table-condensed table-responsive"; style="text-align:center">
