--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -42,6 +42,7 @@
       }
 
     </script>
+    <br>
     <div class="container-fluid">
 
       <form class="form-inline teremForm" action="/" method="get">
@@ -54,7 +55,7 @@
         <button type="submit" class="btn btn-default">Kiválaszt</button>
       </form>
 
-      <form class="form-inline" action="/" method="get">
+      <form class="form-inline teremForm" action="/" method="get">
         <input type="text" name="ujterem">
         <button type="submit" class="btn btn-default">Új terem hozzáadása</button>   
       </form>
@@ -70,6 +71,7 @@
       </form>
 
     </div>
+    <br>
     <div class="container-fluid" style="text-align:center">
       <table class="table table-stripped table-bordered table-hover table-condensed table-responsive"; style="text-align:center">
         <thead>
