--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -44,8 +44,10 @@
     </script>
     <br>
     <div class="container-fluid">
+      
 
       <form class="form-inline teremForm" action="/" method="get">
+        <label></label>
         <label>Terem:</label>
         <select name="terem">
           <% for (var i = 0; i < termek.length; i++) { %>
@@ -56,7 +58,7 @@
       </form>
 
       <form class="form-inline teremForm" action="/" method="get">
-        <input type="text" name="ujterem">
+        <input type="text" name="ujterem" required>
         <button type="submit" class="btn btn-default">Új terem hozzáadása</button>   
       </form>
 
