--- a/views/NewMain.ejs
+++ b/views/NewMain.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Newmain</title>
+    <title>Termek nyilvántartása</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../Stylesheets/NewMain_Stylesheet.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="icon" href="./Data/icon.png">
   </head>
   <body>
     <script type="text/javascript">
@@ -44,6 +46,7 @@
       window.onload = function() {
         Update();
       }
+
 
     </script>
     <br>
