--- a/Stylesheets/Main_Stylesheet.css
+++ b/Stylesheets/Main_Stylesheet.css
@@ -1,75 +1,17 @@
-tr {
-	border: none;
+th {
+	box-sizing: "border-box";
+	width: "16%";
 }
 
-td {
-	height: 50px;
+.teremForm {
+	padding: 20px 20px;
+	display: inline;
 }
 
-#tableTitle{
-	border-bottom: 5px solid black;
-	padding: 10px 1px 10px 1px;
-	font-size: 30px;
-	background-color: #F0F8FF;
+.oraForm{
+	display: none;
 }
 
-.napok{
-	border-bottom: 2px solid black;
-	border-right: 2px solid black;
-	border-left: 2px solid black;
-	width: 220px;
-}
-
-.ora{
-	padding: 20px;
-	width: 50px;
-	background-color: #F0F8FF;
-	font-weight: bold;
-	font-size: 20px;
-}
-
-table{
-	width: 100%;
-}
-
-body {
-	background-color: 	#F5F5DC;
-}
-
-#header{
-	background-color: #000000;
-	text-align: center;
-	height: 50px;
-}
-
-.headerlink{
-	color:  #FFFAF0;
-	padding: 20px;
-	font-size: 30px;
-	text-decoration: none;
-}
-
-#header:hover{
-	background-color: #778899;
-	font-weight: bold;
-}
-
-#hetfo{
-	background-color: 	#00FFFF;
-}
-
-#kedd{
-	background-color: #ADFF2F;
-}
-
-#szerda{
-	background-color: 	#FFA500;
-}
-
-#csutortok{
-	background-color: 	#FFB6C1;
-}
-
-#pentek{
-	background-color: 	#FFFF00;
+#keresesEredmeny {
+	padding-left: 20px; 
 }
