--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../Stylesheets/main_Stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/path/to/jquery.cookie.js"></script>
     <link rel="icon" href="./Data/icon.png">
   </head>
   <body>
